package extra.dibujando;

public enum Color {
    ROJO,
    VERDE,
    AZUL,
    AMARILLO,
    VIOLETA,
    NEGRO,
    BLANCO,
}
