package extra.dibujando;

public interface Coloreable {

    void colorearse(Color color);
}
