package extra.dibujando;

public interface FiguraGeometrica {
    Integer calcularSuperficie();
}
