package extra.dibujando;

public interface Guardable {

}
